fixing another spacing issue -- this time with the comic strip on the home page

--- a/web/php_project/css/styles.css
+++ b/web/php_project/css/styles.css
@@ -140,6 +140,10 @@ h1 {
     padding: 15px;
 }
 
+#comic-images {
+    text-align: center;
+}
+
 .comic-strip {
     width: 350px;
     height: 250px;
